--- a/css/main.css
+++ b/css/main.css
@@ -1,157 +1,31 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
+body{
     margin: 0;
-}
-html{
-    font-size: 62.5%;
+    padding: 0;
+    font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.header-container{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-right: 2rem;
-}
-.header nav ul{
-    padding-top: 1rem;
-}
-.header nav ul li{
-    height: auto;
-    width: 3rem;
-    display: inline;
-    margin: 0.5rem;
-}
-.header nav ul li a{
+a{
     text-decoration: none;
-    color: rgba(0,0,0,0.87);
-    font-size: 1.4rem;
-}
-.logo-suite{
-    margin: 0.5rem;
-    display: inline;
-}
-.perfil{
-    margin: 0.5rem;
-    display: inline;
-}
-.logo-suite img{
-    width: 4.6rem;
-    height: auto;
-}
-.perfil img{
-    width: 3rem;
-    height: auto;
-    border-radius: 50%;
+    cursor: pointer;
 }
 
-.main{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-.main div{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-
-    margin: 5rem;
-}
-.main-logo{
+header{
     width: 100%;
-    height: auto;
+    height: 60px;
 }
-.main-logo img{
-    height: 16rem;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.main-input{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 3.4rem;
-    width: 48.7rem;
-}
-.main-search{
-    margin: 0 2rem;
-    height: 3.6rem;
-    width: 15em;
-}
-.main-lucky{
-    margin: 0 2rem;
-    height: 3.6rem;
-    width: 15em;
-}
-.main p{
-    color: rgba(0,0,0,0.87);
-    font-size: 1.4rem;
-}
-
-.footer{
-    font-size: 1.4rem;
-    background-color: #F2F2F2;
-
+header nav{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-}
-.footer-location{
-    display: block;
-    width: 100%;
-    height: auto;
-    margin: 0 0 0 0;
-    padding: 0 0 0 2.7rem;
-    color: #5F6368;
-}
-.footer-left{
-    width: 50%;
-    height: auto;
-    margin: 3rem 0 1.5rem 0;
-    padding: 0 0 0 2.7rem;
-}
-.footer-left ul{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;    
-}
-.footer-left ul li{
-    list-style: none;
-    padding: 0 2.7rem 0 0;
-}
-.footer-left ul li a{
-    text-decoration: none;
-    color: #5F6368;
-}
-.footer-right{
-    width: 50%;
-    height: auto;
-    margin: 3rem 0 1.5rem 0;
-    padding: 0 0 0 2.7rem;
-}
-.footer-right ul{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
     justify-content: flex-end;
 }
-.footer-right ul li{
+header nav .nav-right-section{
+    width: 250px;
+    height: auto;
+    display: flex;
     list-style: none;
-    padding: 0 2.7rem 0 0;
+    justify-content: center;
+    align-items: center;
 }
-.footer-right ul li a{
-    text-decoration: none;
-    color: #5F6368;
+nav .nav-right-section a{
+    margin-right: 10px;
+    color: #000000;
 }
