--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,24 +48,27 @@ nav .nav-right-section img{
     margin-left: 10px;
 }
 main{
+    width: 32rem;
     margin-top: 8rem;
-    text-align: center;
 }
 main .main-logo{
-    width: 2rem;
+    width: 100vw;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 main .main-logo img{
-    width: 300px;
+    width: 15rem;
 }
 main .main-input{
-    width: 530px;
+    width: 100vw;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 0;
 }
 main .main-input-container{
-    width: 525px;
+    width: 100vw;
     border-radius: 100px;
     border: 1px solid #dfe1e5; 
     display: flex;
@@ -73,8 +76,8 @@ main .main-input-container{
     align-items: center;
 }
 main .main-input input{
-    width: 450px;
-    height: 40px;
+    width: 85vw;
+    height: 3rem;
     border: none;
     outline: none;
 }
@@ -87,15 +90,66 @@ main .main-input .search-item{
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    width: 18px;
-    height: 18px;
+    width: 1.8rem;
+    height: 1.8rem;
 }
 main .main-input .micro-icon{
     background-image: url('https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    width: 18px;
-    height: 18px;
+    width: 1.8rem;
+    height: 1.8rem;
     cursor: pointer;
+}
+main .main-buttons div{
+    visibility: hidden;
+}
+
+footer{
+    width: 100%;
+    height: 75px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 0.85rem;
+    background-color: #d3d0cd;
+    border-top: 1px solid #e4e4e4
+}
+footer ul{
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0 ;
+}
+footer ul li a{
+    margin: 10px;
+    color: #5f6368;
+}
+
+@media only screen and (min-width:400px ){
+    footer{
+        width: 100%;
+        height: 75px;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 1.1rem;
+        background-color: #d3d0cd;
+        border-top: 1px solid #e4e4e4
+    }
+    footer ul{
+        margin: 10px;
+        list-style: none;
+        display: flex;
+        padding-left: 0 ;
+    }
+    footer ul li a{
+        margin: 10px;
+        color: #5f6368;
+    }
 }
